; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/libproc/extr_libproc.c_proc_disable_apptype.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/wrappers/libproc/extr_libproc.c_proc_disable_apptype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@PROC_POLICY_SCOPE_PROCESS = common dso_local global i32 0, align 4
@PROC_POLICY_ACTION_DISABLE = common dso_local global i32 0, align 4
@PROC_POLICY_APPTYPE = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @proc_disable_apptype(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %8 [
    i32 128, label %7
    i32 129, label %7
  ]

7:                                                ; preds = %2, %2
  br label %10

8:                                                ; preds = %2
  %9 = load i32, i32* @EINVAL, align 4
  store i32 %9, i32* %3, align 4
  br label %21

10:                                               ; preds = %7
  %11 = load i32, i32* @PROC_POLICY_SCOPE_PROCESS, align 4
  %12 = load i32, i32* @PROC_POLICY_ACTION_DISABLE, align 4
  %13 = load i32, i32* @PROC_POLICY_APPTYPE, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @__process_policy(i32 %11, i32 %12, i32 %13, i32 %14, i32* null, i32 %15, i32 0)
  %17 = icmp ne i32 %16, -1
  br i1 %17, label %18, label %19

18:                                               ; preds = %10
  store i32 0, i32* %3, align 4
  br label %21

19:                                               ; preds = %10
  %20 = load i32, i32* @errno, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %19, %18, %8
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @__process_policy(i32, i32, i32, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
